--- a/index.html
+++ b/index.html
@@ -8,12 +8,26 @@
 </head>
 <body>
 
-<input type="text" id="duration">
+    <svg height="400" width="400">
+        <circle 
+        r="190" 
+        cx="200" 
+        cy="200"
+        fill ="transparent"
+        stroke = "green"
+        stroke-width = "15"
+        
+        transform = "rotate(-90 200 200)"
+        />
+        
+    </svg>
+
+<input type="text" id="duration" value="30">
 <button id="start">Start</button>
 <button id="pause">Pause</button>
 
 
-
+    <script src="./timer.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
